# discord-gacha

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  convert.fish  products.example.toml
src/: error.rs  graphql.rs  main.rs  order_number.rs  shopify.rs
src/config/: banner.rs  mod.rs  pool.rs  pools.rs  products.rs
src/database/: mod.rs  pulls_data.rs  row.rs
src/google/: mod.rs
src/inventory/: mod.rs
src/shopify/: client.rs  error.rs  mod.rs  order_number.rs
terraform/modules/docker/: README.md  main.tf  outputs.tf  variables.tf
