[package]
name = "discord-gacha"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = "0.12.0"
sheets = "0.7.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
