[package]
name = "discord-gacha"
version = "0.1.0"
edition = "2021"

[dependencies]
a1_notation = "0.4.3"
dotenv = "0.15.0"
image = { version = "0.24.9", features = ["png"], default-features = false }
log = "0.4.21"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = { version = "0.12.0", features = ["builder"] }
sheets = "0.7.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"
